@@ -8,6 +8,8 @@ class Gem::SpecFetcher
 
     @specs = {}
     @latest_specs = {}
+
+    @fetcher = Gem::RemoteFetcher.fetcher
   end
 
   ##
@@ -22,7 +24,7 @@ class Gem::SpecFetcher
         spec = spec - [nil, 'ruby']
         uri = source_uri + "#{Gem::MARSHAL_SPEC_DIR}#{spec.join('-')}.gemspec.rz"
 
-        spec = Gem::RemoteFetcher.fetcher.fetch_path uri
+        spec = @fetcher.fetch_path uri
         spec = inflate spec
         Marshal.load spec
       end
@@ -72,11 +74,7 @@ class Gem::SpecFetcher
       elsif @latest_specs.include? source_uri then
         list[source_uri] = @latest_specs[source_uri]
       else
-        spec_path = source_uri + "#{file}.#{Gem.marshal_version}.gz"
-        spec_dump_gz = Gem::RemoteFetcher.fetcher.fetch_path spec_path
-        spec_dump = unzip spec_dump_gz
-
-        specs = Marshal.load spec_dump
+        specs = load_specs source_uri, file
 
         cache = all ? @specs : @latest_specs
 
@@ -86,6 +84,49 @@ class Gem::SpecFetcher
     end
 
     list
+  end
+
+  def load_specs(source_uri, file)
+    file_name = "#{file}.#{Gem.marshal_version}.gz"
+
+    spec_path = source_uri + file_name
+
+    cache_dir = File.join @dir, "#{spec_path.host}:#{spec_path.port}",
+                          File.dirname(spec_path.path)
+
+    local_file = File.join(cache_dir, file_name).chomp '.gz'
+
+    if File.exist? local_file then
+      local_size = File.stat(local_file).size
+
+      remote_file = spec_path.dup
+      remote_file.path = remote_file.path.chomp '.gz'
+      remote_size = @fetcher.fetch_size remote_file
+
+      spec_dump = Gem.read_binary local_file if remote_size == local_size
+    end
+
+    unless spec_dump then
+      loaded = true
+
+      spec_dump_gz = @fetcher.fetch_path spec_path
+      spec_dump = unzip spec_dump_gz
+    end
+
+    specs = Marshal.load spec_dump
+
+    if loaded then
+      begin
+        FileUtils.mkdir_p cache_dir
+
+        open local_file, 'wb' do |io|
+          Marshal.dump specs, io
+        end
+      rescue
+      end
+    end
+    
+    specs
   end
 
   ##
